add css and background image fixed

--- a/index.html
+++ b/index.html
@@ -26,13 +26,18 @@
             </ul>
           </div>
       </nav>
-    <main>
-      <section id="home" class="jumbotron contaner-fluid">
-          <div class="container">
-            <h1>Great Lakes Integral</h1> 
-            <h2>Cosmic Concern with a Regional Focus</h2> 
-            <p><strong>Come and practice with us.  Check out our events and workshops running all year 'round.</strong></p>
-            <button>View Events and Workshops</button>
+    <main data-offset="50px">
+      <section id="home" class="jumbotron container-fluid">
+          <div id="intro-container" class="container">
+            <div id="title-wrapper" class="container">
+                <h1>Great Lakes Integral</h1> 
+                <h2 class="subtitle">Cosmic Concern with a Regional Focus</h2> 
+            </div>
+            <a id="events-link" class="text-center" href="#events">
+                <div id="invite-wrapper" class="container text-center">
+                    <p><strong>Come and practice with us.  Check out our events and workshops running all year 'round.</strong></p>
+                </div>
+            </a>
           </div>
       </section>
         <section id="about" class="container">
