--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <p>At Great Lakes Integral, our mission is to help build, connect, grow, develop, and transform the integral community in the Great Lakes region. To meet our mission, we will invite, invent, and invest in a range of formal and informal practices designed to initialize, stabilize, and optimize integral consciousness in the region. We are both daring in our vision and pragmatic in our methods.</p>
         </section>
         <section id="media" class="container">
+            <div class="container">
             <h2>Media</h2>
             <h3>Blogs</h3>
             <div class="row">
@@ -57,7 +58,7 @@
               </div>
               ...
             </div>
-                        <div class="row">
+            <div class="row">
               <div class="col-xs-6 col-md-3">
                 <a href="#" class="thumbnail">
                   <img src="..." alt="...">
@@ -98,6 +99,7 @@
                       </div>
                       ...
                     </div>
+                </div>
         </section>
         <section id="community" class="container">
             <h2>Community</h2>
